--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring:
   thymeleaf:
     mode: HTML
+  resources:    chain:      strategy:        content:          enabled: true
+          paths: /**
+          
