--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=JST
     username: root
     password: rootpassword  messages:    fallback-to-system-locale: false  jpa:    show-sql: true
-    hibernate:      ddl-auto: create
+    hibernate:      ddl-auto: none
