--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,12 @@ spring:
 
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=JST
+    url: jdbc:mysql://localhost:3306/test
     username: root
-    password: rootpassword  messages:    fallback-to-system-locale: false  jpa:    show-sql: true
-    hibernate:      ddl-auto: none
+    password: rootpassword
+  messages:
+    fallback-to-system-locale: false
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
