--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,12 @@ spring:
     cache: false
   profiles:
     acrive: dev
+  devtools:
+    remote:
+      restart:
+        enabled: true
+    livereload:
+      enabled: true
 
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -16,3 +22,4 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
+
