--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 
 spring:
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url:  jdbc:mysql://localhost:3306/test
     username: root
     password: rootpassword
     
@@ -12,3 +12,10 @@ spring:
 #    show-sql: true
 #    hibernate:
 #      ddl-auto: none
+
+logging:
+  level:
+    org:
+      springframework:
+        jdbc:
+          core : TRACE
