--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,7 +13,8 @@ spring:
 #    hibernate:
 #      ddl-auto: none
 
-logging:
+logging:  file:
+    name: logs/spring-boot.log
   level:
     org:
       springframework:
