--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>pring-boot-starter-logging</artifactId>
-				</exclusion>
+				<!-- <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>pring-boot-starter-logging</artifactId> 
+					</exclusion> -->
 			</exclusions>
 		</dependency>
 		<!-- JPA -->
