--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	<artifactId>atndCloneProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>atndCloneProject</name>
-	<description>test</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -29,12 +28,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<exclusions>
-				<!-- <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>pring-boot-starter-logging</artifactId> 
+				<!-- <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>pring-boot-starter-logging</artifactId>
 					</exclusion> -->
 			</exclusions>
 		</dependency>
 		<!-- JPA -->
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-jpa</artifactId> 
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-jpa</artifactId>
 			</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -89,7 +88,7 @@
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>bootstrap-icons</artifactId>
-			<version>1.5.0</version>
+			<version>1.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.validation</groupId>
@@ -118,4 +117,6 @@
 		</plugins>
 	</build>
 
+	<description>mc.deile.net</description>
+	<url>https://mc.deile.net</url>
 </project>
