--- a/src/main/resources/application-dev_woker.yml
+++ b/src/main/resources/application-dev_woker.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url:  jdbc:mysql://localhost:3306/test
-    username: root
-    password: 
+    url:  jdbc:mariadb://localhost:3306/test
+    username: javaroot
+    password: rootpassword
     
   messages:
     fallback-to-system-locale: false
