--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>net.deile</groupId>
-	<artifactId>atndCloneProject</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>atndCloneProject</name>
+	<artifactId>deile_server</artifactId>
+	<version>1.0.1-SNAPSHOT</version>
+	<name>deile_server</name>
 
 	<properties>
 		<java.version>17</java.version>
