--- a/src/__main/resources/application-dev.yml
+++ b/src/__main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 
 spring:
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url:  jdbc:mariadb://localhost:3306/test
-    username: javaroot
-    password: rootpassword
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url:  jdbc:mysql://localhost:3306/test
+    username: root
+    password: 
     
   messages:
     fallback-to-system-locale: false
