--- a/src/__main/resources/application-dev_home.yml
+++ b/src/__main/resources/application-dev_home.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url:  jdbc:mariadb://localhost:3306/test
-    username: javaroot
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url:  jdbc:mysql://localhost:3306/test
+    username: root
     password: rootpassword
     
   messages:
